--- a/src/App.css
+++ b/src/App.css
@@ -1,27 +1,52 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 .App {
-  text-align: center;
-  min-height: 100vh;
-  min-width: 100vw;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin: 0;
+  min-height: 100vh;
+  min-width: 100vw;
+  text-align: center;
+}
+
+.button-container {
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+  margin-bottom: 10px;
+}
+
+button {
+  border: none;
+  background-color: transparent;
+  cursor: pointer;
+  font-size: 100px;
+}
+
+.button-container button {
+  font-size: 30px;
+}
+
+.button-container button:hover {
+  transform: scale(1.1);
+}
+
+.button-container button:disabled {
+  cursor: no-drop;
 }
 
 .video-container {
-  width: 90vw; 
-  max-width: calc(100vh * (16 / 9)); 
-  height: calc(90vw * (9 / 16)); 
+  width: 90vw;
+  max-width: calc(100vh * (16 / 9));
+  height: calc(90vw * (9 / 16));
 }
 
 iframe {
   width: 100%;
   height: 100%;
-}
-
-button{
-  border: none;
-  background-color: transparent;
-  cursor: pointer;
-  font-size: 100px;
 }
