--- a/src/App.css
+++ b/src/App.css
@@ -2,12 +2,13 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  background-color: #fffef8;
+  color: #445566;
 }
 
 .App {
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
   min-height: 100vh;
   min-width: 100vw;
@@ -36,32 +37,30 @@ button:disabled {
 }
 
 .button-container,
-.btn-range-container {
+.btn-range-container,
+.random-btn-container {
   display: flex;
   justify-content: center;
   gap: 10px;
   margin-bottom: 10px;
 }
 
+/* Specific styling for random-btn-container on mobile */
 .random-btn-container {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  gap: 10px;
-  margin-bottom: 10px;
+  flex-direction: column; /* Stack buttons vertically on mobile */
 }
 
 .button-container button,
 button {
-  font-size: 30px;
+  font-size: 30px; /* Default font size for buttons */
 }
 
 .btn-range-container button {
-  font-size: 20px;
+  font-size: 20px; /* Smaller font size for range buttons */
 }
 
 .spin-button {
-  font-size: 100px;
+  font-size: 100px; /* Large font size for spin button */
 }
 
 .video-container {
@@ -73,4 +72,51 @@ button {
 iframe {
   width: 100%;
   height: 100%;
+  border: 0;
+}
+/* - #445566
+- #FFFEF8
+- #FEDCO
+- #BEFAF8
+- #F3FFF9
+- #FAF8F1
+- #CC3355
+-  */
+.tab-active {
+  background-color: #cc3355;
+  color: #f3fff9;
+  padding: 5px;
+  border-radius: 10px;
+}
+
+/* Mobile optimization */
+@media (max-width: 600px) {
+  .App {
+    justify-content: flex-start;
+  }
+
+  .flex-center,
+  .button-container,
+  .btn-range-container,
+  .random-btn-container {
+    gap: 5px;
+  }
+
+  .button-container button,
+  button {
+    font-size: calc(30px * (1.2));
+  }
+
+  .btn-range-container button {
+    font-size: calc(20px * (1.2));
+  }
+
+  .spin-button {
+    font-size: calc(100px * (1.5));
+  }
+
+  .video-container {
+    width: calc(100vw - 20px);
+    height: calc((100vw -20px) * (9 / 16));
+  }
 }
