--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,12 @@
   min-height: 100vh;
   min-width: 100vw;
   text-align: center;
+  gap: 10px;
+}
+
+h1 {
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
 .flex-center {
@@ -45,9 +51,8 @@ button:disabled {
   margin-bottom: 10px;
 }
 
-/* Specific styling for random-btn-container on mobile */
 .random-btn-container {
-  flex-direction: column; /* Stack buttons vertically on mobile */
+  flex-direction: column;
 }
 
 .button-container button,
@@ -73,6 +78,15 @@ iframe {
   width: 100%;
   height: 100%;
   border: 0;
+}
+.footer {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  padding: 10px;
+  color: #445566;
+  text-align: center;
 }
 /* - #445566
 - #FFFEF8
