--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@
   color: #445566;
 }
 
-.App {
+.Home {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -47,6 +47,7 @@ button:disabled {
 .random-btn-container {
   display: flex;
   justify-content: center;
+  align-items: center;
   gap: 10px;
   margin-bottom: 10px;
 }
@@ -115,12 +116,6 @@ iframe {
   .random-btn-container {
     gap: 5px;
   }
-
-  .button-container button,
-  button {
-    font-size: calc(30px * (1.2));
-  }
-
   .btn-range-container button {
     font-size: calc(20px * (1.2));
   }
