--- a/src/App.css
+++ b/src/App.css
@@ -21,17 +21,24 @@
 }
 .theme-toggle {
   position: fixed;
-  top: 20px;
+  bottom: 20px;
   right: 20px;
-  font-size: 20px;
   cursor: pointer;
   border: none;
   background-color: transparent;
+  transition: all 0.3s ease;
+  @media (max-width: 600px) {
+    bottom: 10px;
+    right: 10px;
+  }
 }
 
 h1 {
   margin-top: 10px;
   margin-bottom: 10px;
+  @media (max-width: 600px) {
+    font-size: 2rem;
+  }
 }
 
 .flex-center {
